[gd_scene load_steps=4 format=3 uid="uid://45ik64yhnvnu"]

[ext_resource type="Script" uid="uid://okykkwfjwexk" path="res://wild_artling.gd" id="1_byxp5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_kgecs"]
radius = 0.738177

[sub_resource type="SphereShape3D" id="SphereShape3D_b0cat"]
radius = 2.34387

[node name="WildArtling" type="CharacterBody3D"]
script = ExtResource("1_byxp5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_kgecs")

[node name="BattleArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="BattleArea"]
shape = SubResource("SphereShape3D_b0cat")

[node name="BattleMarker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0101146, 2.33541)

[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
[connection signal="body_entered" from="BattleArea" to="." method="_on_battle_area_body_entered"]
